# api-starwars

./: .gitignore  README.md  api.py  database.py  main.py  models.py  pyproject.toml  schemas.py  star_wars_api.py
database/: database.py  models.py
endpoints/: api.py  endpoints.py  films.py  planets.py
schemas/: films.py  planets.py  schemas.py
tests/: test_endpoints.py
