[tool.poetry]
name = "api-starwars"
version = "0.1.0"
description = ""
authors = ["Rafael Correa Nagy <rafaelcnagy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
requests = "^2.27.1"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
